--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/ICP_white.jpg"
+avatar: "/assets/img/Logo.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -50,9 +50,9 @@ social-network-links:
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
 #  github: daattali
-  twitter: icpnetwork
+#  twitter: icpnetwork
 #  patreon: DeanAttali
-  youtube: "@imagingcerebralphysiologyn7583"
+#  youtube: "@imagingcerebralphysiologyn7583"
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
@@ -92,7 +92,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "icp-network.org"
+#url-pretty: "icp-network.org"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
